# gwc-datalib

./: .env.example  .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: full_test.yml
docs/: getting_started.md  index.md  reference.md
getting_started/: index.html
gwc_datalib/: client.py  config.py
gwc_datalib/auth/: auth0_manager.py
gwc_datalib/sources/: azure_blob.py  base.py  dataverse.py
notebooks/: example_exploring_datasets.ipynb
reference/: index.html
tests/: test_auth.py
